# siafu

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: build.yml  release.yml  reuse.yml
docs/: CODE_OF_CONDUCT.md
res/windows/: version.rc.in
src/: config.hpp.in  marching-cubes.cpp  obj.cpp  ply.cpp  siafu.cpp  siafu.hpp  stl.cpp  tiff.cpp
